# portable_network

./: test.py
devel/: .catkin  .rosinstall  setup.sh
devel/lib/network/: network_node
devel/lib/pkgconfig/: network.pc
devel/share/network/cmake/: networkConfig.cmake
src/network/: CMakeLists.txt  package.xml
src/network/include/: ActionCommand.h  BodyCommand.h  HeadCommand.h  TeamInfo.h  dprocess.hpp  dtransmit.hpp  recv_socket.hpp
src/network/src/: main.cpp
